# ossu

./: README.md
mit-intro-to-cs/: README.md  book031.py  book032_sum_floats_in_string.py  book033_cube_roots.py  book033_roots.py  book034.py  book034_newton_rhapson.py  book0411.py  installing_pyenv_warnings.txt  ps0.py  ps1a.py  ps1b.py  ps1c.py  pyproject.toml
mit-intro-to-cs/book_exs/: book031.py  book033_roots.py  book0431_fibonacci.py  book056_dicts_and_tuples.py
mit-intro-to-cs/ps1_savings/: ps1b.py  ps1c.py
mit-intro-to-cs/ps2/: hangman.py
mit-intro-to-cs/ps2_hangman/: hangman.py  tests.py
mit-intro-to-cs/ps3_word_game/: ps3.py  test_ps3.py
